k8s/apps/mirakurun-iptv-rewriter/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app

spec:
  replicas: 1
  selector:
    matchLabels:
      app: default
  template:
    metadata:
      annotations:
        fluentbit.io/exclude: "true"
      labels:
        app: default
    spec:
      containers:
        - name: app
          image: ghcr.io/starrybluesky/mirakurun-iptv-rewriter
          ports:
            - containerPort: 5000
      restartPolicy: Always
      imagePullSecrets:
        - name: ghcr-io-credentials
