k8s/apps/mirakurun-iptv-rewriter/resources/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: route-gateway

spec:
  entryPoints:
    - gateway
  routes:
    - kind: Rule
      match: (Host(`mahiron-api.starry.blue`) || Host(`mahiron-api-v6.starry.blue`) || Host(`mirakurun-api.starry.blue`) || Host(`mirakurun-api-v6.starry.blue`)) && PathPrefix(`/api/iptv/playlist`)
      services:
        - name: app
          port: 5000
      middlewares:
        - name: mirakurun-basic-auth
